<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/swen_anigans"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:overlay="true"
    sothree:umanoPanelHeight="68dp"
    sothree:umanoShadowHeight="4dp">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_quiz_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="swen_anigans.mathematicfanatic.QuizResultsActivity">
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                style="@style/ActionBarText"
                android:text="@string/quizcomplete"
                android:textColor="#FFFFFF" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/num_correct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/finished">
            <TextView
                android:layout_marginTop="25dp"
                android:id="@+id/correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct"
                android:textSize="50sp"/>
            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" / "
                android:textSize="50sp"/>
            <TextView
                android:layout_marginTop="25dp"
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="50sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/stars"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_below="@id/num_correct">
            <ImageView
                android:id="@+id/star1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_star_border"
                android:tint="@color/starTint"/>
            <ImageView
                android:id="@+id/star2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_star_border"
                android:tint="@color/starTint"/>
            <ImageView
                android:id="@+id/star3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_star_border"
                android:tint="@color/starTint"/>
            <ImageView
                android:id="@+id/star4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_star_border"
                android:tint="@color/starTint"/>
            <ImageView
                android:id="@+id/star5"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_star_border"
                android:tint="@color/starTint"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/scroll_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_keyboard_arrow_up_black_64dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_above="@+id/scroll_text"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/scroll_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Swipe or Press Here"
            android:textSize="15sp"
            android:layout_alignParentBottom="true"/>

        <TextView
            android:id="@+id/finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Finished!"
            android:gravity="center_horizontal"
            android:textSize="75sp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/my_toolbar"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/slideuppanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/pick_reward"
            android:text="@string/pick_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:gravity="center_horizontal"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/reward1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/reward1" />
        <Button
            android:id="@+id/reward2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/reward2" />
        <Button
            android:id="@+id/reward3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/reward3" />
        <Button
            android:id="@+id/reward4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/reward4" />
        <Button
            android:id="@+id/reward5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/reward5" />
        <Button
            android:id="@+id/reward6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/reward6" />
        </LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>